# eevee

./: .gitignore  404.html  README.md  README.org  alias.yaml  build.py  data-structures.html  feed.xml  index.html  pyproject.toml  roadmap.html
.github/workflows/: docs.yml  test.yml
assets/: alias.yaml  groups.yaml  layers.yaml  vad.yaml
assets/css/: just-the-docs-dark.css.map  just-the-docs-default.css.map  just-the-docs-light.css.map
assets/js/: just-the-docs.js  search-data.json
data/: README.md  lang.yaml  predicted.transcriptions.csv  tagged.transcriptions.csv
docs/: _config.yml  data-structures.md  index.md  roadmap.md
docs/_posts/: 2021-09-01-welcome-to-jekyll.markdown
docs/metrics/: asr.md  index.md  intents.md  slots.md
eevee/: asr.py  asr_metrics.py  cli.py  levenshtein.c  levenshtein.cc  metrics.py  slice.py  transforms.py  types.py  utils.py  wer.py
eevee/entities/: eval.py
eevee/examples/: asr_metrics_cli.py  get_reports.py
eevee/intents/: eval.py  ord.py
eevee/metrics/: __init__.py  asr.py  classification.py  entity.py  slot_filling.py  utils.py  vad.py
eevee/ord/: utils.py
metrics/: asr.html  index.html  intents.html  slots.html
scripts/: asr_get_csv_from_json.py  asr_metrics_cli.py  charon_intent_prediction_file_gen.py  charon_tagged_to_categorical_entities.py  charon_tagged_to_predicted_entities.py  eval_barge_in.py  get_reports.py
tests/: test_asr.py  test_eevee.py  test_entities.py  test_metrics.py
tests/asr/: test_asr_report.py  test_process_noise_info.py
tests/entities/: test_datetime_time_date_comp.py  (+2 more)
(+13 files in other folders)
