[tool.poetry]
name = "eevee"
version = "0.2.11"
description = "Evaluation tools for internal projects"
authors = ["Abhinav Tushar <lepisma@fastmail.com>"]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.6"
pydash = "^4.7"
python-dateutil = "^2.8"
pandas = "^0.24.2"

[tool.poetry.dev-dependencies]
pytest = "^4.2"
mypy = "^0.660.0"
flake8 = "^3.7"
autopep8 = "^1.4"

[[tool.poetry.source]]
name = "cheeseshop"
url = "https://cheeseshop.vernacular.ai"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
