[tool.poetry]
name = "eevee"
version = "0.5.0"
description = "Evaluation utilities"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.812"

[tool.poetry.scripts]
eevee = "eevee.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"